--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@ body {
       <article>
         <h1>Mindanao</h1>
         <p>Mindanao is the second-largest island in the Philippines, after Luzon, and seventh-most popular island in the world. 
-            It is located in the southern region of the archipelago. According to the 2020 census, Mindanao had a population of 26,252,442, 
-            while the entire island group had an estimated population of 27,021,036. </p>
+            It is located in the southern region of the archipelago. According to the 2020 census, Mindanao had a population of 26,252,442. </p>
         <p>Did you know that Mindanao has several tribes, with the number of 18 major Lumad ethnoliguistic groupings, such as the Bagobo, 
             Banwaon, Blaan, Bukidnon, Dibabawon, Higaonon, Mamanwa, Mandaya, Mangguwangan, Manobo, Mansaka, Matigsalug, Subanen, Tagakaolo, 
             Talaandig, Tboli, Teduray, and Ubo. Each Lumad tribes has their own dialects. The first dialect in Mindanao is Bisaya, 
@@ -150,7 +149,7 @@ body {
     </section>
     
     <footer>
-      <p>Disclaimer: I don't own the photos.</p>
+      <p>Disclaimer: I don't own the photos. Informations and images were from other websites and wikipedia.</p>
     </footer>
     
     </body>
