Added ul tag for the Natural Resources list. Update the navigation by added some links.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mindanao</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/index.css"> <!-- I added styles folder for the index.css -->
 
   </head>
 
@@ -17,44 +17,52 @@
     <section>
       <nav>
         <ul>
-          <li><img src="./images/mindanao1.jpg" alt="a wonderful seashore with boat"></li>
-          <li><img src="./images/min4.jpg" alt="two men with the carabao"></li>
-      </ul>
+          <li>
+            <a href="https://www.youtube.com/watch?v=6vyaZJszeJY">
+              <img src="./images/mindanao1.jpg" alt="a wonderful seashore with boat"></li>
+            </a>
+          <li>
+            <a href="https://southeastasiaglobe.com/the-philippines-carabao/">
+              <img src="./images/min4.jpg" alt="two men with the carabao"></li>
+            </a>
+        </ul>
       </nav>
       <div class="content">
-      <article>
-        <h1>Mindanao</h1>
-        <p id="first-paragraph">Mindanao is the second-largest island in the Philippines, after Luzon, and seventh-most popular island in the world. 
+        <article>
+          <h1>Mindanao</h1>
+            <p id="first-paragraph">Mindanao is the second-largest island in the Philippines, after Luzon, and seventh-most popular island in the world. 
             It is located in the southern region of the archipelago. According to the 2020 census, Mindanao had a population of 26,252,442. </p>
-        <p>Did you know that Mindanao has several tribes, with the number of 18 major Lumad ethnoliguistic groupings, such as the Bagobo, 
+            <p>Did you know that Mindanao has several tribes, with the number of 18 major Lumad ethnoliguistic groupings, such as the Bagobo, 
             Banwaon, Blaan, Bukidnon, Dibabawon, Higaonon, Mamanwa, Mandaya, Mangguwangan, Manobo, Mansaka, Matigsalug, Subanen, Tagakaolo, 
             Talaandig, Tboli, Teduray, and Ubo. Each Lumad tribes has their own dialects. The first dialect in Mindanao is Bisaya, 
             second-largest dialect in the Philippines, after Tagalog; the national language.</p>
-        <p>Natural resources:</p>
-          <li>Lead</li>
-          <li>Zinc</li>
-          <li>Iron</li>
-          <li>Ore</li>
-          <li>Copper</li>
-          <li>Chromite</li>
-          <li>Magnetite</li>
-          <li>Gold</li>
+            <p>Natural resources:</p>
+              <ul id="list">
+                <li>Lead</li>
+                <li>Zinc</li>
+                <li>Iron</li>
+                <li>Ore</li>
+                <li>Copper</li>
+                <li>Chromite</li>
+                <li>Magnetite</li>
+                <li>Gold</li>
+              </ul>
 
-        <p>With one-third of its land area devoted to agriculture, the island has been tagged as the country's food basket. 
-          The majority of the country's total production of high-value commodities, such as rubber, pineapple, banana and coffee, 
-          comes from Mindanao.</p>
+            <p>With one-third of its land area devoted to agriculture, the island has been tagged as the country's food basket. 
+            The majority of the country's total production of high-value commodities, such as rubber, pineapple, banana and coffee, 
+            comes from Mindanao.</p>
 
-        <p>Mindanao is renowned for its stunning natural beauty, diverse cultures, and endless adventure possibilities. 
-          This captivating region boasts iconic sites like Mount Apo and pristine beaches in Siargao. 
-          It's a melting pot of traditions and dances, from the T'boli beadwork to Maranao celebrations.</p>
+            <p>Mindanao is renowned for its stunning natural beauty, diverse cultures, and endless adventure possibilities. 
+            This captivating region boasts iconic sites like Mount Apo and pristine beaches in Siargao. 
+            It's a melting pot of traditions and dances, from the T'boli beadwork to Maranao celebrations.</p>
       </article>
 
       <div class="images-column">
         <img src="./images/min6.jpg" alt="Lumad Ethnic group-wearing their ethnic attire">
         <img src="./images/min9.jpg" alt="4 men carrying a big fish">
         <img src="./images/tinago_falls.jpeg" alt="the breathtaking falls">
-
-    </div>
+      </div>
+      
     </div>
     </section>
     
