Exploring: updated font-style and font-weight

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li>
-            <a href="https://www.youtube.com/watch?v=6vyaZJszeJY">
+            <a href="https://www.tripadvisor.com/ShowUserReviews-g2223522-d2242656-r298097372-Enchanted_River-Hinatuan_Surigao_del_Sur_Province_Mindanao.html">
               <img src="./images/mindanao1.jpg" alt="a wonderful seashore with boat"></li>
             </a>
           <li>
@@ -62,7 +62,7 @@
         <img src="./images/min9.jpg" alt="4 men carrying a big fish">
         <img src="./images/tinago_falls.jpeg" alt="the breathtaking falls">
       </div>
-      
+
     </div>
     </section>
     
